--- a/nodejs/testdata/nodejs21.yaml
+++ b/nodejs/testdata/nodejs21.yaml
@@ -2,5 +2,5 @@ schemaVersion: "2.0.0"
 commandTests:
   - name: nodejs
     command: "/nodejs/bin/node"
-    args: ["/check_certificate.js"]
-    expectedOutput: ["statusCode: 200"]
+    args: ["--version"]
+    expectedOutput: ["v21.0.0"]
