resolves #1409 to note that Python on Debian 12 is out of experimental while it is still built for Debian 11 from experimental. Another PR would need to move all of Python builds out of experimental.

--- a/examples/python3/BUILD
+++ b/examples/python3/BUILD
@@ -14,7 +14,7 @@ pkg_tar(
 [
     oci_image(
         name = "hello_" + distro,
-        base = "//experimental/python3:python3_root_arm64_" + distro,
+        base = "//python3:python3_root_arm64_" + distro,
         cmd = [
             "hello.py",
             "/etc",
