--- a/java/testdata/java21_debug_debian12.yaml
+++ b/java/testdata/java21_debug_debian12.yaml
@@ -22,8 +22,7 @@ fileExistenceTests:
   - name: no-shell
     path: "/bin/sh"
     shouldExist: false
-# TODO
-# metadataTest:
-#   envVars:
-#    - key: 'JAVA_VERSION'
-#      value: '17.0.8'
+metadataTest:
+  envVars:
+   - key: 'JAVA_VERSION'
+     value: '21.0.1'
