--- a/java/testdata/java21_debian12.yaml
+++ b/java/testdata/java21_debian12.yaml
@@ -12,6 +12,10 @@ fileExistenceTests:
   - name: certs
     path: "/etc/ssl/certs/java/cacerts"
     shouldExist: true
+  - name: certs
+    path: "/usr/lib/jvm/temurin21_jre_amd64/lib/security/cacerts"
+    permissions: 'Lrwxrwxrwx'
+    shouldExist: true
   - name: no-busybox
     path: "/busybox/sh"
     shouldExist: false
