--- a/examples/cc/BUILD
+++ b/examples/cc/BUILD
@@ -1,8 +1,8 @@
 # Public notice: this file is for internal documentation, testing, and
 # reference only. Note that repo maintainers can freely change any part of the
 # repository code at any time.
-load("//base:distro.bzl", "DISTROS")
 load("@contrib_rules_oci//oci:defs.bzl", "structure_test")
+load("//common:variables.bzl", "variables")
 load("//private/oci:defs.bzl", "cc_image")
 
 package(default_visibility = ["//visibility:public"])
@@ -11,13 +11,13 @@ package(default_visibility = ["//visibility:public"])
     name = "hello_" + distro,
     srcs = ["hello.c"],
     base = "//cc:cc_root_amd64_" + distro,
-) for distro in DISTROS]
+) for distro in variables.DISTS]
 
 [cc_image(
     name = "hello_cc_" + distro,
     srcs = ["hello_cc.cc"],
     base = "//cc:cc_root_amd64_" + distro,
-) for distro in DISTROS]
+) for distro in variables.DISTS]
 
 [structure_test(
     name = "hello_" + distro + "_test",
@@ -28,7 +28,7 @@ package(default_visibility = ["//visibility:public"])
         "amd64",
         "manual",
     ],
-) for distro in DISTROS]
+) for distro in variables.DISTS]
 
 [structure_test(
     name = "hello_cc_" + distro + "_test",
@@ -39,4 +39,4 @@ package(default_visibility = ["//visibility:public"])
         "amd64",
         "manual",
     ],
-) for distro in DISTROS]
+) for distro in variables.DISTS]
