--- a/examples/nonroot/BUILD
+++ b/examples/nonroot/BUILD
@@ -1,11 +1,11 @@
 # Public notice: this file is for internal documentation, testing, and
 # reference only. Note that repo maintainers can freely change any part of the
 # repository code at any time.
-load("@rules_pkg//:pkg.bzl", "pkg_tar")
 load("@contrib_rules_oci//oci:defs.bzl", "oci_image", "structure_test")
 load("@io_bazel_rules_docker//contrib:passwd.bzl", "passwd_entry", "passwd_file")
 load("@io_bazel_rules_go//go:def.bzl", "go_binary")
-load("//base:distro.bzl", "DISTROS")
+load("@rules_pkg//:pkg.bzl", "pkg_tar")
+load("//common:variables.bzl", "variables")
 
 # Create a passwd file with a nonroot user and uid.
 passwd_entry(
@@ -58,7 +58,7 @@ pkg_tar(
     base = ":passwd_image",
     tars = [":user_tar"],
     visibility = ["//visibility:private"],
-) for distro in DISTROS]
+) for distro in variables.DISTS]
 
 # Test to verify this works :)
 [structure_test(
@@ -70,4 +70,4 @@ pkg_tar(
         "manual",
     ],
     visibility = ["//visibility:private"],
-) for distro in DISTROS]
+) for distro in variables.DISTS]
