--- a/java/BUILD
+++ b/java/BUILD
@@ -1,12 +1,12 @@
 load("@contrib_rules_oci//oci:defs.bzl", "oci_image", "oci_image_index", "structure_test")
 load("@rules_pkg//:pkg.bzl", "pkg_tar")
-load("//private/oci:defs.bzl", "java_image")
-load("//base:base.bzl", "deb_pkg")
-load("//base:distro.bzl", "DISTROS")
 load("//cacerts:java.bzl", "cacerts_java")
-load("//java:jre_ver.bzl", "jre_ver")
+load("//common:variables.bzl", "variables")
 load("//:debian_versions.bzl", DEBIAN_VERSIONS = "DEBIAN_PACKAGE_VERSIONS")
 load("//:java_archives.bzl", "JAVA_RELEASE_VERSIONS")
+load("//java:jre_ver.bzl", "jre_ver")
+load("//private/oci:defs.bzl", "java_image")
+load("//private/util:deb.bzl", "deb")
 
 package(default_visibility = ["//visibility:public"])
 
@@ -40,7 +40,7 @@ JAVA_VERSIONS_PER_DISTRO = [
         name = "cacerts_java_" + arch + "_" + distro,
         cacerts_tar = "//base:cacerts_" + arch + "_" + distro,
     )
-    for distro in DISTROS
+    for distro in variables.DISTS
     for arch in JAVA_ARCHITECTURES
 ]
 
@@ -51,7 +51,7 @@ JAVA_VERSIONS_PER_DISTRO = [
             "/usr/bin/java": "/usr/lib/jvm/java-" + java_version + "-openjdk-" + arch + "/bin/java",
         },
         deps = [
-            deb_pkg(
+            deb.package(
                 arch,
                 distro,
                 "openjdk-" + java_version + "-jre-headless",
@@ -106,7 +106,7 @@ JAVA_VERSIONS_PER_DISTRO = [
         "_debug",
     ]
     for user in USERS
-    for distro in DISTROS
+    for distro in variables.DISTS
 ]
 
 # a build-base that isn't published, but used to generate our publishable base and as a base for temurin
@@ -118,20 +118,20 @@ JAVA_VERSIONS_PER_DISTRO = [
         base = ("//base:base_nossl" if (not ("debug" in mode)) else "//base:base_nossl_debug") + "_" + user + "_" + arch + "_" + distro,
         env = {"LANG": "C.UTF-8"},
         tars = [
-            deb_pkg(arch, distro, "zlib1g"),
-            deb_pkg(arch, distro, "libjpeg62-turbo"),
-            deb_pkg(arch, distro, "libpng16-16"),
-            deb_pkg(arch, distro, "liblcms2-2"),
-            deb_pkg(arch, distro, "libfreetype6"),
-            deb_pkg(arch, distro, "fonts-dejavu-core"),
-            deb_pkg(arch, distro, "fontconfig-config"),
-            deb_pkg(arch, distro, "libexpat1"),
-            deb_pkg(arch, distro, "libfontconfig1"),
-            deb_pkg(arch, distro, "libuuid1"),
-            deb_pkg(arch, distro, "libbrotli1"),
-            deb_pkg(arch, distro, "libcrypt1"),
-            deb_pkg(arch, distro, "libstdcpp6"),
-            deb_pkg(arch, distro, "libgcc-s1"),
+            deb.package(arch, distro, "zlib1g"),
+            deb.package(arch, distro, "libjpeg62-turbo"),
+            deb.package(arch, distro, "libpng16-16"),
+            deb.package(arch, distro, "liblcms2-2"),
+            deb.package(arch, distro, "libfreetype6"),
+            deb.package(arch, distro, "fonts-dejavu-core"),
+            deb.package(arch, distro, "fontconfig-config"),
+            deb.package(arch, distro, "libexpat1"),
+            deb.package(arch, distro, "libfontconfig1"),
+            deb.package(arch, distro, "libuuid1"),
+            deb.package(arch, distro, "libbrotli1"),
+            deb.package(arch, distro, "libcrypt1"),
+            deb.package(arch, distro, "libstdcpp6"),
+            deb.package(arch, distro, "libgcc-s1"),
             "//common:locale_" + distro + "_" + arch,
         ],
     )
@@ -140,7 +140,7 @@ JAVA_VERSIONS_PER_DISTRO = [
         "_debug",
     ]
     for user in USERS
-    for distro in DISTROS
+    for distro in variables.DISTS
     for arch in JAVA_ARCHITECTURES
 ]
 
@@ -160,18 +160,18 @@ DISTRO_SPECIFIC_LIBRARIES = {
         base = "java_build_base" + mode + "_" + user + "_" + arch + "_" + distro,
         env = {"LANG": "C.UTF-8"},
         tars = [
-            deb_pkg(arch, distro, "libharfbuzz0b"),
-            deb_pkg(arch, distro, "libgraphite2-3"),
-            deb_pkg(arch, distro, "libglib2.0-0"),
+            deb.package(arch, distro, "libharfbuzz0b"),
+            deb.package(arch, distro, "libgraphite2-3"),
+            deb.package(arch, distro, "libglib2.0-0"),
             ":cacerts_java_" + arch + "_" + distro,
-        ] + [deb_pkg(arch, distro, library) for library in DISTRO_SPECIFIC_LIBRARIES[distro]],
+        ] + [deb.package(arch, distro, library) for library in DISTRO_SPECIFIC_LIBRARIES[distro]],
     )
     for mode in [
         "",
         "_debug",
     ]
     for user in USERS
-    for distro in DISTROS
+    for distro in variables.DISTS
     for arch in JAVA_ARCHITECTURES
 ]
 
@@ -239,7 +239,7 @@ DISTRO_SPECIFIC_LIBRARIES = {
         },
         tars = [
             ":openjdk_jre_headless_" + java_version + "_" + arch + "_" + distro,
-            deb_pkg(
+            deb.package(
                 arch,
                 distro,
                 "openjdk-" + java_version + "-jdk-headless",
@@ -338,7 +338,7 @@ DISTRO_SPECIFIC_LIBRARIES = {
     ]
     for arch in JAVA_ARCHITECTURES
     for user in USERS
-    for distro in DISTROS
+    for distro in variables.DISTS
 ]
 
 [
