--- a/cc/BUILD
+++ b/cc/BUILD
@@ -1,7 +1,6 @@
 load("@contrib_rules_oci//oci:defs.bzl", "oci_image", "oci_image_index")
-load("//base:distro.bzl", "DISTROS")
-load("//base:base.bzl", "deb_pkg")
-load("//:checksums.bzl", "ARCHITECTURES")
+load("//common:variables.bzl", "variables")
+load("//private/util:deb.bzl", "deb")
 
 package(default_visibility = ["//visibility:public"])
 
@@ -11,7 +10,7 @@ package(default_visibility = ["//visibility:public"])
         name = ("cc" if not mode else mode[1:]) + "_" + user + "_" + distro,
         images = [
             ("cc" if not mode else mode[1:]) + "_" + user + "_" + arch + "_" + distro
-            for arch in ARCHITECTURES
+            for arch in variables.ARCHS
         ],
     )
     for mode in [
@@ -22,7 +21,7 @@ package(default_visibility = ["//visibility:public"])
         "root",
         "nonroot",
     ]
-    for distro in DISTROS
+    for distro in variables.DISTS
 ]
 
 [
@@ -30,19 +29,19 @@ package(default_visibility = ["//visibility:public"])
         name = ("cc" if (not mode) else mode[1:]) + "_" + user + "_" + arch + "_" + distro,
         base = "//base" + (mode if mode else ":base") + "_" + user + "_" + arch + "_" + distro,
         tars = [
-            deb_pkg(arch, distro, "libgomp1"),
-            deb_pkg(arch, distro, "libstdcpp6"),
-            deb_pkg(arch, distro, "libgcc-s1"),
+            deb.package(arch, distro, "libgomp1"),
+            deb.package(arch, distro, "libstdcpp6"),
+            deb.package(arch, distro, "libgcc-s1"),
         ],
     )
     for mode in [
         "",
         ":debug",
     ]
-    for arch in ARCHITECTURES
+    for arch in variables.ARCHS
     for user in [
         "root",
         "nonroot",
     ]
-    for distro in DISTROS
+    for distro in variables.DISTS
 ]
