support usrmerged /bin and /sbin
Distros are adopting the merged /usr directories scheme where the /{bin,sbin,lib}/
directories are made symbolic links to /usr/{bin,sbin,lib}/.

There are use cases where this could be justified for Distroless
as well. For example, a statically built Busybox/Toybox w/ built-in
shell can be installed to /usr/bin and still have the typical
shellscript shebangs (/bin/sh or /bin/bash) working.

However, Debian 11/12 base packages (base-files, libc6 etc) do not
support the merged /usr so it's not very straightfoward to enable
for Distroless.

One approach to support this for /bin/ and /sbin is to create a
layer with whiteouts and symlinks. Tests are also added to ensure
any Distroless image flavor does not overwrite the symlinks created
in that lower layer.

Signed-off-by: Mikko Ylinen <mikko.ylinen@intel.com>

--- a/examples/cc/BUILD
+++ b/examples/cc/BUILD
@@ -22,7 +22,10 @@ package(default_visibility = ["//visibility:public"])
 [structure_test(
     name = "hello_" + distro + "_test",
     size = "small",
-    config = ["testdata/hello_" + distro + ".yaml"],
+    config = [
+        "testdata/hello_" + distro + ".yaml",
+        "testdata/usrmerge.yaml",
+    ],
     image = ":hello_" + distro,
     tags = [
         "amd64",
@@ -33,7 +36,10 @@ package(default_visibility = ["//visibility:public"])
 [structure_test(
     name = "hello_cc_" + distro + "_test",
     size = "small",
-    config = ["testdata/hello_cc_" + distro + ".yaml"],
+    config = [
+        "testdata/hello_cc_" + distro + ".yaml",
+        "testdata/usrmerge.yaml",
+    ],
     image = ":hello_cc_" + distro,
     tags = [
         "amd64",
