--- a/base/testdata/base.yaml
+++ b/base/testdata/base.yaml
@@ -1,4 +1,4 @@
-schemaVersion: "1.0.0"
+schemaVersion: "2.0.0"
 fileExistenceTests:
 # Basic FS sanity checks.
 - name: root
@@ -7,6 +7,18 @@ fileExistenceTests:
 - name: tmp
   path: '/tmp'
   shouldExist: true
+- name: '/bin -> /usr/bin'
+  path: '/bin'
+  shouldExist: true
+  permissions: 'Lrwxrwxrwx'
+  uid: 0
+  gid: 0
+- name: '/sbin -> /usr/sbin'
+  path: '/sbin'
+  shouldExist: true
+  permissions: 'Lrwxrwxrwx'
+  uid: 0
+  gid: 0
 - name: passwd
   path: '/etc/passwd'
   shouldExist: true
