--- a/nodejs/BUILD
+++ b/nodejs/BUILD
@@ -53,6 +53,7 @@ USER = [
         config = [
             "testdata/nodejs" + major_version + ".yaml",
             "testdata/check_npm.yaml",
+            "testdata/usrmerge.yaml",
         ],
         image = "nodejs" + major_version + ("" if (not mode) else mode) + "_" + user + "_" + arch + "_" + distro,
         tags = [
